--- a/src/main/resources/templates/teacher/updateInfo.html
+++ b/src/main/resources/templates/teacher/updateInfo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>问卷网-创建测评</title>
+    <title>问卷网-修改问卷</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../static/teacher/css/addInfo.css">
