--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background: #fff;
+    background: #eee;
     color: #222;
     cursor: auto;
     font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
