--- a/src/main/resources/static/teacher/css/addInfo.css
+++ b/src/main/resources/static/teacher/css/addInfo.css
@@ -148,7 +148,9 @@ button{
     font-size: 34px;
     color: #F20045;
 }
-
+.add-body .hide-mode{
+    display: none;
+}
 .add-body .add-context {
     margin-top: 20px;
     width: 300px;
@@ -196,6 +198,11 @@ button{
 .add-body .add-context-info{
     background-color: #ffffff;
     margin: -60px 0 70px 310px;
+    padding: 10px 0 5px 10px;
+}
+.add-body .query{
+    background-color: #ffffff;
+    margin: 0px;
     padding: 10px 0 5px 10px;
 }
 .add-body .add-context-info .add-context-info-title{
@@ -280,6 +287,19 @@ button{
     font-size: 16px;
     margin-right: 50px;
     color: #c5bebe;
+}
+
+.float-button{
+    width: 150px;
+    height: 50px;
+    position: fixed;
+    right: 20px;
+    border: none;
+    outline: none;
+    background: #bae189;
+    color: #FFF;
+    font-size: 18px;
+    border-radius: 8px;
 }
 
 
