--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>index</title>
+	<title>登录</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" /> 
 
@@ -34,7 +34,7 @@
 					</div>
 
 					<div class="text-right p-t-8 p-b-31">
-						<a href="javascript:">忘记密码？</a>
+						<a href="javascript:forgotPassword(window.location.pathname)">忘记密码？</a>
 					</div>
 
 					<div class="container-login100-form-btn">
@@ -44,7 +44,7 @@
 						</div>
 					</div>
 
-					<div class="txt1 text-center p-t-54 p-b-20">
+					<!--<div class="txt1 text-center p-t-54 p-b-20">
 						<span>第三方登录</span>
 					</div>
 
@@ -60,7 +60,7 @@
 						<a href="#" class="login100-social-item bg3">
 							<i class="fa fa-weibo"></i>
 						</a>
-					</div>
+					</div>-->
 
 					<div class="flex-col-c p-t-25">
 						<a class="txt2">立即注册</a>
@@ -88,6 +88,16 @@
         });
     }
     init();
+
+
+    function forgotPassword(path) {
+        var student = RegExp(/student/);
+        var teacher = RegExp(/teacher/);
+        if(student.test(path)){
+           window.location.href='/student/forgot.html';
+        }else if(teacher.test(path))
+            window.location.href='/teacher/forgot.html';
+    }
 </script>
 
 </html>
