--- a/src/main/resources/templates/student/index.html
+++ b/src/main/resources/templates/student/index.html
@@ -58,9 +58,6 @@
         </caption>
         <thead>
         <tr>
-            <td>
-                <button class="all-list hav-all-lis">全选</button>
-            </td>
             <td>序号</td>
             <td>标题</td>
             <td>状态</td>
@@ -150,23 +147,20 @@
                     index = ((data.currentPage - 1) * data.pageSize + 1)
                     $.each(pageData.items, function (i, v) {
                         html = '<tr class="s-data-info">' +
-                            '                <td>' +
-                            '                    <input id="' + v.questionnaireId + '" state="' + v.questionnaireState + '" class="chat-button-location-radio-input" type="checkbox" name="checkbox" value="' + v.questionnaireId + '" onClick="changeCheck()" />' +
-                            '                    <label  for="' + v.questionnaireId + '"></label >' +
-                            '                </td>' +
                             '                <td>' + index + '</td>' +
                             '                <td>' + v.questionnaireTitle + '</td>';
                         if (v.questionnaireState == 2) {
                             html += '<td class="wait">进行中</td>'
-
-                        } else if (v.questionnaireState == 3) {
+                        } else if (v.questionnaireState == 3 && v.submitQuestionnaireState==1) {
                             html += '<td class="ok">已提交</td>';
-                        } else {
+                        } else if(v.questionnaireState == 3 && v.submitQuestionnaireState==0){
+                            html += '<td class="wait">进行中</td>'
+                        }else {
                             html += '<td class="over">已结束</td>';
                         }
                         html += '<td>' + v.questionnaireReleaseTime + '</td>' +
                             '                <td>' +
-                            '                    <button class="query" onClick="doSomething(' + v.questionnaireId + ','+v.questionnaireState+',this)">查看</button>' +
+                            '                    <button class="query" onClick="doSomething(' + v.questionnaireId + ','+v.questionnaireState+','+v.submitQuestionnaireState+',this)">查看</button>' +
                             '                </td>' +
                             ' </tr>';
                         $('.s-data-list').append(html);
@@ -258,23 +252,21 @@
                     index = ((data.currentPage - 1) * data.pageSize + 1)
                     $.each(pageData.items, function (i, v) {
                         html = '<tr class="s-data-info">' +
-                            '                <td>' +
-                            '                    <input id="' + v.questionnaireId + '" state="' + v.questionnaireState + '" class="chat-button-location-radio-input" type="checkbox" name="checkbox" value="' + v.questionnaireId + '" onClick="changeCheck()" />' +
-                            '                    <label  for="' + v.questionnaireId + '"></label >' +
-                            '                </td>' +
                             '                <td>' + index + '</td>' +
                             '                <td>' + v.questionnaireTitle + '</td>';
                         if (v.questionnaireState == 2) {
                             html += '<td class="wait">进行中</td>'
 
-                        } else if (v.questionnaireState == 3) {
+                        } else if (v.questionnaireState == 3 && v.submitQuestionnaireState==1) {
                             html += '<td class="ok">已提交</td>';
+                        } else if(v.questionnaireState == 3 && v.submitQuestionnaireState==0){
+                            html += '<td class="wait">进行中</td>'
                         } else {
                             html += '<td class="over">已结束</td>';
                         }
                         html += '<td>' + v.questionnaireReleaseTime + '</td>' +
                             '                <td>' +
-                            '                    <button class="query" onClick="doSomething(' + v.questionnaireId + ','+v.questionnaireState+',this)">查看</button>' +
+                            '                    <button class="query" onClick="doSomething(' + v.questionnaireId + ','+v.questionnaireState+','+v.submitQuestionnaireState+',this)">查看</button>' +
                             '                </td>' +
                             ' </tr>';
                         $('.s-data-list').append(html);
@@ -291,14 +283,15 @@
     }
 
 
-    function doSomething(id,state, obj) {
+    function doSomething(id,state1,state2, obj) {
 
         var type = $(obj).text();
         var data = {
             questionnaireId: id
         }
         if (type == "查看") {
-            common.setCookie('state',state,7);
+            common.setCookie('state1',state1,7);
+            common.setCookie('state2',state2,7);
             window.location.href = '/student/queryQuestionnaireById/' + id + '';
         }
 
@@ -346,23 +339,21 @@
                     index = ((data.currentPage - 1) * data.pageSize + 1)
                     $.each(pageData.items, function (i, v) {
                         html = '<tr class="s-data-info">' +
-                            '                <td>' +
-                            '                    <input id="' + v.questionnaireId + '" state="' + v.questionnaireState + '" class="chat-button-location-radio-input" type="checkbox" name="checkbox" value="' + v.questionnaireId + '" onClick="changeCheck()" />' +
-                            '                    <label  for="' + v.questionnaireId + '"></label >' +
-                            '                </td>' +
                             '                <td>' + index + '</td>' +
                             '                <td>' + v.questionnaireTitle + '</td>';
                         if (v.questionnaireState == 2) {
                             html += '<td class="wait">进行中</td>'
 
-                        } else if (v.questionnaireState == 3) {
+                        } else if (v.questionnaireState == 3 && v.submitQuestionnaireState==1) {
                             html += '<td class="ok">已提交</td>';
+                        } else if(v.questionnaireState == 3 && v.submitQuestionnaireState==0){
+                            html += '<td class="wait">进行中</td>'
                         } else {
                             html += '<td class="over">已结束</td>';
                         }
                         html += '<td>' + v.questionnaireReleaseTime + '</td>' +
                             '                <td>' +
-                            '                    <button class="query" onClick="doSomething(' + v.questionnaireId + ','+v.questionnaireState+',this)">查看</button>' +
+                            '                    <button class="query" onClick="doSomething(' + v.questionnaireId + ','+v.questionnaireState+','+v.submitQuestionnaireState+',this)">查看</button>' +
                             '                </td>' +
                             ' </tr>';
                         $('.s-data-list').append(html);
@@ -389,23 +380,21 @@
                     index = ((data.currentPage - 1) * data.pageSize + 1)
                     $.each(pageData.items, function (i, v) {
                         html = '<tr class="s-data-info">' +
-                            '                <td>' +
-                            '                    <input id="' + v.questionnaireId + '" state="' + v.questionnaireState + '" class="chat-button-location-radio-input" type="checkbox" name="checkbox" value="' + v.questionnaireId + '" onClick="changeCheck()" />' +
-                            '                    <label  for="' + v.questionnaireId + '"></label >' +
-                            '                </td>' +
                             '                <td>' + index + '</td>' +
                             '                <td>' + v.questionnaireTitle + '</td>';
                         if (v.questionnaireState == 2) {
                             html += '<td class="wait">进行中</td>'
 
-                        } else if (v.questionnaireState == 3) {
+                        } else if (v.questionnaireState == 3 && v.submitQuestionnaireState==1) {
                             html += '<td class="ok">已提交</td>';
+                        } else if(v.questionnaireState == 3 && v.submitQuestionnaireState==0){
+                            html += '<td class="wait">进行中</td>'
                         } else {
                             html += '<td class="over">已结束</td>';
                         }
                         html += '<td>' + v.questionnaireReleaseTime + '</td>' +
                             '                <td>' +
-                            '                    <button class="query" onClick="doSomething(' + v.questionnaireId + ','+v.questionnaireState+',this)">查看</button>' +
+                            '                    <button class="query" onClick="doSomething(' + v.questionnaireId + ','+v.questionnaireState+','+v.submitQuestionnaireState+',this)">查看</button>' +
                             '                </td>' +
                             ' </tr>';
                         $('.s-data-list').append(html);
