--- a/src/main/resources/templates/teacher/forgot.html
+++ b/src/main/resources/templates/teacher/forgot.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>index</title>
+	<title>找回密码</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" /> 
 
@@ -22,7 +22,7 @@
 		<div class="container-login100" style="background-image: url('../static/images/bg-01.jpg');">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
 				<div class="login100-form validate-form">
-					<span class="login100-form-title p-b-49">注册</span>
+					<span class="login100-form-title p-b-49">找回密码</span>
 					<div class="wrap-input100 validate-input m-b-23" data-validate="请输入用户名">
 						<input class="input100" type="text" name="username" id="username" placeholder="请输入用户名" autocomplete="off">
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
@@ -32,11 +32,7 @@
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 					<div class="wrap-input100 validate-input m-b-23" data-validate="请输入密码">
-						<input class="input100" type="password" name="password" id="password" placeholder="请输入密码" autocomplete="off">
-						<span class="focus-input100" data-symbol="&#xf190;"></span>
-					</div>
-					<div class="wrap-input100 validate-input m-b-23" data-validate="请输入密码">
-						<input class="input100" type="password" name="password2" id="password2" placeholder="再次请输入密码" autocomplete="off">
+						<input class="input100" type="password" name="password" id="password" placeholder="请输入新密码" autocomplete="off">
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
 					<div class="wrap-input100 validate-input m-b-23" data-validate="请输入邮箱">
@@ -45,11 +41,10 @@
 					</div>
 
 
-
 					<div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
-							<button class="login100-form-btn" id="toRegister">立即注册</button>
+							<button class="login100-form-btn" id="toForgot">立即找回</button>
 						</div>
 					</div>
 				</div>
@@ -60,36 +55,6 @@
 	<script src="../static/vendor/jquery/jquery-3.3.1.min.js"></script>
 	<script src="../static/js/main.js"></script>
 	<script src="../static/js/common.js"></script>
-	<script type="text/javascript">
-        $(function () {
-            $('#username').blur(function () {
-                var userName=$(this).val();
-
-                if(userName!=undefined&&userName!=''){
-                    var data={
-                        userName:userName
-                    }
-                    common.ajaxSend(
-                        '/student/selectTeacherByUserName',
-                        data,
-                        function (e) {
-                            if(e.code==0){
-                                alert("该用户名已被注册")
-                            }
-                        },
-                        function () {
-
-                        }
-                    )
-                }
-            })
-            $('#password2').blur(function () {
-                if($('#password2').val()!=$('#password').val()){
-                    alert('两次输入的密码不一致')
-                }
-            })
-        })
-	</script>
 </body>
 
 </html>
