redis  key过期通知系统

--- a/src/main/resources/templates/teacher/loadSubmitInfo.html
+++ b/src/main/resources/templates/teacher/loadSubmitInfo.html
@@ -56,7 +56,7 @@
         <div class="info-list-title">
             <span class="title" id="title"></span>
             <br/>
-            <span class="release-time">发布时间:<span class="release-time-info"></span></span>
+            <span class="release-time">提交时间:<span class="release-time-info"></span></span>
             <div class="info-list-context">
                 <div class="list-context-info">
                     
@@ -99,7 +99,7 @@
                     var contextLength = restData.submitContexts.length;
                     var index = 0;
                     $('#title').html(restData.questionnaireTitle);
-                    $('.release-time-info').html(restData.questionnaireReleaseTime);
+                    $('.release-time-info').html(restData.submitTime);
                     var html = '';
                     for (var i = 0; i < titleLength; i++) {
                         var html = '';
