--- a/src/main/resources/templates/student/index.html
+++ b/src/main/resources/templates/student/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>问卷星-学生端</title>
+    <title>心理测评平台-学生端</title>
     <link rel="stylesheet" href="../../static/student/css/info.css">
     <link rel="stylesheet" href="../../static/css/index.css">
     <link rel="stylesheet" href="../../static/plugin/select/css/jquery.searchableSelect.css">
@@ -26,16 +26,15 @@
     <div class="head-nav ">
         <a href="/student/index.html">
             <img src="../../static/teacher/img/my.png">
-            <span>我的问卷</span>
+            <span>主页</span>
         </a>
         &nbsp;
         <a href="javascript:void(0)">
             <span>|</span>
         </a>
         &nbsp;
-        <a>
-            <img src="../../static/teacher/img/user.png">
-            <span id="userInfo">userInfo</span>
+        <a href="javascript:void(0)">
+            <span>|</span>
         </a>
         &nbsp;
         <a>
