--- a/src/main/resources/templates/student/info.html
+++ b/src/main/resources/templates/student/info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>问卷网-提交问卷</title>
+    <title>心理测评平台-提交问卷</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../static/student/css/queryInfo.css">
@@ -26,7 +26,7 @@
     <div class="head-nav ">
         <a href="/student/index.html">
             <img src="../../static/teacher/img/my.png">
-            <span>我的问卷</span>
+            <span>主页</span>
         </a>
         &nbsp;
         <a href="javascript:void(0)">
@@ -38,10 +38,8 @@
             <span id="userInfo">userInfo</span>
         </a>
         &nbsp;
-        <a>
-
-            <img src="../../static/teacher/img/remind.png">
-            <span>消息</span>
+        <a href="javascript:void(0)">
+            <span>|</span>
         </a>
         &nbsp;
         <a href="/student/login.html">
@@ -265,7 +263,7 @@
 
                             index++;
                         }
-                        html += '                    </ul>'
+                        html += '                    </ul>';
                         $('.list-context-info').append(html);
                     }
                 }
