--- a/src/main/resources/templates/student/register.html
+++ b/src/main/resources/templates/student/register.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>index</title>
+	<title>心理测评平台-学生端-注册</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" /> 
 
