--- a/src/main/resources/templates/teacher/add.html
+++ b/src/main/resources/templates/teacher/add.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>问卷网-创建问卷</title>
+    <title>心理测评平台-创建测评</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../static/css/index.css">
@@ -21,7 +21,7 @@
     <div class="head-nav ">
         <a href="/teacher/index.html">
             <img src="../../static/teacher/img/my.png">
-            <span>我的问卷</span>
+            <span>主页</span>
         </a>
         &nbsp;
         <a href="javascript:void(0)">
@@ -33,10 +33,8 @@
             <span id="userInfo">userInfo</span>
         </a>
         &nbsp;
-        <a>
-
-            <img src="../../static/teacher/img/remind.png">
-            <span>消息</span>
+        <a href="javascript:void(0)">
+            <span>|</span>
         </a>
         &nbsp;
         <a href="/teacher/login.html">
@@ -47,11 +45,11 @@
 </nav>
 <nav class="list-body">
     <div class="add-data-head">
-        <div class="add-data-head-title">创建问卷</div>
+        <div class="add-data-head-title">创建测评</div>
     </div>
     <div class="add-data-body">
         <div class="add-data-contex" data-validate="名称不能为空">
-            <span class="add-data-text">问卷名称：</span>
+            <span class="add-data-text">测评名称：</span>
             <input class="add-data-input input100" id="title" autocomplete="off" />
         </div>
         <button class="add-data-submit">立即创建</button>
